# resuma-formula

./: Cargo.toml  README.md
src/: main.rs
src/pages/: _registry.rs  about.rs  index.rs  mod.rs
static/: styles.css
static/client/: formula-gpu.js
